package fr.umontpellier.iut.svg;

public  abstract class Charts extends Tag {
    public Charts(String name) {
        super(name);
    }
}
